--- a/src/java/hc/并发容器.md
+++ b/src/java/hc/并发容器.md
@@ -801,6 +801,690 @@ public class CopyOnWriteArrayList<E>
 }
 ```
 
+## 阻塞队列
+
+支持两个附加操作的队列
+
+* 支持阻塞的插入方法
+
+队列满时，队列阻塞插入元素的线程
+
+* 支持阻塞的移除方法
+
+队列为空时，获取元素的线程会等待队列为非空
+
+### 核心类
+
+#### BlockingQueue.class
+
+```java
+public interface BlockingQueue<E> extends Queue<E>{
+
+}
+```
+
+#### AbstractQueue.class
+```java
+public abstract class AbstractQueue<E>
+    extends AbstractCollection<E>
+    implements Queue<E> {
+}
+```
+
+### ArrayBlockingQueue
+
+一个数组实现的有界队列（FIFO）
+
+```java
+public class ArrayBlockingQueue<E> extends AbstractQueue<E>
+        implements BlockingQueue<E>, java.io.Serializable {
+    
+    // 容器
+    final Object[] items;
+
+    // 元素个数
+    int count;
+
+    final ReentrantLock lock;
+    private final Condition notEmpty;
+    private final Condition notFull;
+
+    // 默认非公平
+    public ArrayBlockingQueue(int capacity) {
+        this(capacity, false);
+    }
+
+    // 可以指定访问模式（公平或非公平）
+    public ArrayBlockingQueue(int capacity, boolean fair) {
+        if (capacity <= 0)
+            throw new IllegalArgumentException();
+        this.items = new Object[capacity];
+        lock = new ReentrantLock(fair);
+        notEmpty = lock.newCondition();
+        notFull =  lock.newCondition();
+    }
+
+    // 插入元素
+    public boolean offer(E e) {
+        Objects.requireNonNull(e);
+        final ReentrantLock lock = this.lock;
+        lock.lock();
+        try {
+            if (count == items.length)
+                return false;
+            else {
+                enqueue(e);
+                return true;
+            }
+        } finally {
+            lock.unlock();
+        }
+    }
+
+    public void put(E e) throws InterruptedException {
+        Objects.requireNonNull(e);
+        final ReentrantLock lock = this.lock;
+        lock.lockInterruptibly();
+        try {
+            // 检查是否已满
+            while (count == items.length)
+                notFull.await();
+            enqueue(e);
+        } finally {
+            lock.unlock();
+        }
+    }
+
+    private void enqueue(E e) {
+        // assert lock.isHeldByCurrentThread();
+        // assert lock.getHoldCount() == 1;
+        // assert items[putIndex] == null;
+        final Object[] items = this.items;
+        // 放入数组
+        items[putIndex] = e;
+        if (++putIndex == items.length) putIndex = 0;
+        count++;
+        notEmpty.signal();
+    }
+
+    public E take() throws InterruptedException {
+        final ReentrantLock lock = this.lock;
+        lock.lockInterruptibly();
+        try {
+            while (count == 0)
+                // 阻塞
+                notEmpty.await();
+            return dequeue();
+        } finally {
+            lock.unlock();
+        }
+    }
+
+    private E dequeue() {
+        // assert lock.isHeldByCurrentThread();
+        // assert lock.getHoldCount() == 1;
+        // assert items[takeIndex] != null;
+        final Object[] items = this.items;
+        @SuppressWarnings("unchecked")
+        E e = (E) items[takeIndex];
+        // 置空
+        items[takeIndex] = null;
+        if (++takeIndex == items.length) takeIndex = 0;
+        count--;
+        if (itrs != null)
+            itrs.elementDequeued();
+        notFull.signal();
+        return e;
+    }
+
+    public int size() {
+        final ReentrantLock lock = this.lock;
+        lock.lock();
+        try {
+            return count;
+        } finally {
+            lock.unlock();
+        }
+    }
+}
+```
+
+### LinkedBlockingQueue
+
+链表实现的有界阻塞队列
+
+```java
+public class LinkedBlockingQueue<E> extends AbstractQueue<E>
+        implements BlockingQueue<E>, java.io.Serializable {
+
+    private final int capacity;
+    private final AtomicInteger count = new AtomicInteger();
+    transient Node<E> head;
+    private transient Node<E> last;        
+
+    static class Node<E> {
+        E item;
+
+        /**
+         * One of:
+         * - the real successor Node
+         * - this Node, meaning the successor is head.next
+         * - null, meaning there is no successor (this is the last node)
+         */
+        Node<E> next;
+
+        Node(E x) { item = x; }
+    }
+
+    // Integer.MAX_VALUE
+    public LinkedBlockingQueue() {
+        this(Integer.MAX_VALUE);
+    }
+
+    // 指定容量
+    public LinkedBlockingQueue(int capacity) {
+        if (capacity <= 0) throw new IllegalArgumentException();
+        this.capacity = capacity;
+        last = head = new Node<E>(null);
+    }
+
+    public void put(E e) throws InterruptedException {
+        if (e == null) throw new NullPointerException();
+        final int c;
+        final Node<E> node = new Node<E>(e);
+        final ReentrantLock putLock = this.putLock;
+        final AtomicInteger count = this.count;
+        putLock.lockInterruptibly();
+        try {
+            // 判断是否已满
+            while (count.get() == capacity) {
+                notFull.await();
+            }
+            enqueue(node);
+            c = count.getAndIncrement();
+            if (c + 1 < capacity)
+                notFull.signal();
+        } finally {
+            putLock.unlock();
+        }
+        if (c == 0)
+            signalNotEmpty();
+    }   
+
+    // 放入尾部
+    private void enqueue(Node<E> node) {
+        last = last.next = node;
+    }    
+
+    public E take() throws InterruptedException {
+        final E x;
+        final int c;
+        final AtomicInteger count = this.count;
+        final ReentrantLock takeLock = this.takeLock;
+        takeLock.lockInterruptibly();
+        try {
+            // 是否为空
+            while (count.get() == 0) {
+                notEmpty.await();
+            }
+            x = dequeue();
+            // 元素数量减一
+            c = count.getAndDecrement();
+            if (c > 1)
+                notEmpty.signal();
+        } finally {
+            takeLock.unlock();
+        }
+        if (c == capacity)
+            signalNotFull();
+        return x;
+    }
+
+    private E dequeue() {
+        // assert takeLock.isHeldByCurrentThread();
+        // assert head.item == null;
+        Node<E> h = head;
+        // 取头结点下一个节点
+        Node<E> first = h.next;
+        h.next = h; // help GC
+        // 重新指向头结点
+        head = first;
+        E x = first.item;
+        first.item = null;
+        return x;
+    }
+}
+```
+
+### LinkedTransferQueue
+
+链表结构的无界阻塞队列
+
+```java
+public class LinkedTransferQueue<E> extends AbstractQueue<E>
+    implements TransferQueue<E>, java.io.Serializable  {
+
+    static final class Node {
+        final boolean isData;   // false if this is a request node
+        volatile Object item;   // initially non-null if isData; CASed to match
+        volatile Node next;
+        volatile Thread waiter; // null when not waiting for a match
+
+        /**
+         * Constructs a data node holding item if item is non-null,
+         * else a request node.  Uses relaxed write because item can
+         * only be seen after piggy-backing publication via CAS.
+         */
+        Node(Object item) {
+            ITEM.set(this, item);
+            isData = (item != null);
+        }
+
+        /** Constructs a (matched data) dummy node. */
+        Node() {
+            isData = true;
+        }
+    }
+}
+```
+
+### LinkedBlockingDeque
+
+链表结构的双向阻塞队列
+
+```java
+public class LinkedBlockingDeque<E>
+    extends AbstractQueue<E>
+    implements BlockingDeque<E>, java.io.Serializable {
+
+    static final class Node<E> {
+        /**
+         * The item, or null if this node has been removed.
+         */
+        E item;
+
+        /**
+         * One of:
+         * - the real predecessor Node
+         * - this Node, meaning the predecessor is tail
+         * - null, meaning there is no predecessor
+         */
+        Node<E> prev;
+
+        /**
+         * One of:
+         * - the real successor Node
+         * - this Node, meaning the successor is head
+         * - null, meaning there is no successor
+         */
+        Node<E> next;
+
+        Node(E x) {
+            item = x;
+        }
+    }
+
+    transient Node<E> first;
+    transient Node<E> last;
+     /** Number of items in the deque */
+    private transient int count;
+    /** Maximum number of items in the deque */
+    private final int capacity;
+
+    public LinkedBlockingDeque() {
+        this(Integer.MAX_VALUE);
+    }
+
+    public LinkedBlockingDeque(int capacity) {
+        if (capacity <= 0) throw new IllegalArgumentException();
+        this.capacity = capacity;
+    }
+
+    public boolean offerFirst(E e) {
+        if (e == null) throw new NullPointerException();
+        Node<E> node = new Node<E>(e);
+        final ReentrantLock lock = this.lock;
+        lock.lock();
+        try {
+            return linkFirst(node);
+        } finally {
+            lock.unlock();
+        }
+    }
+
+    private boolean linkFirst(Node<E> node) {
+        // assert lock.isHeldByCurrentThread();
+        if (count >= capacity)
+            return false;
+        Node<E> f = first;
+        node.next = f;
+        first = node;
+        if (last == null)
+            last = node;
+        else
+            f.prev = node;
+        ++count;
+        notEmpty.signal();
+        return true;
+    }
+
+    public E pollFirst() {
+        final ReentrantLock lock = this.lock;
+        lock.lock();
+        try {
+            return unlinkFirst();
+        } finally {
+            lock.unlock();
+        }
+    }
+
+    private E unlinkFirst() {
+        // assert lock.isHeldByCurrentThread();
+        Node<E> f = first;
+        if (f == null)
+            return null;
+        Node<E> n = f.next;
+        E item = f.item;
+        f.item = null;
+        f.next = f; // help GC
+        first = n;
+        if (n == null)
+            last = null;
+        else
+            n.prev = null;
+        --count;
+        notFull.signal();
+        return item;
+    }
+}
+```
+
+### PriorityBlockingQueue
+
+> Priority [praɪˈɒrəti], Blocking [blɒkɪŋ] queue  [kjuː]
+
+支持优先级的无界阻塞队列
+
+```java
+public class PriorityBlockingQueue<E> extends AbstractQueue<E>
+    implements BlockingQueue<E>, java.io.Serializable {
+    private static final int DEFAULT_INITIAL_CAPACITY = 11;
+    private transient Object[] queue;
+    private transient int size;
+    private transient Comparator<? super E> comparator;
+    private PriorityQueue<E> q;
+
+    // 默认容量，自然序排列
+    public PriorityBlockingQueue() {
+        this(DEFAULT_INITIAL_CAPACITY, null);
+    }
+
+    // 指定容量（最小为1）
+    public PriorityBlockingQueue(int initialCapacity,
+                                 Comparator<? super E> comparator) {
+        if (initialCapacity < 1)
+            throw new IllegalArgumentException();
+        this.comparator = comparator;
+        this.queue = new Object[Math.max(1, initialCapacity)];
+    }
+
+    public void put(E e) {
+        offer(e); // 不需要阻塞
+    }
+
+    public boolean offer(E e) {
+        if (e == null)
+            throw new NullPointerException();
+        final ReentrantLock lock = this.lock;
+        lock.lock();
+        int n, cap;
+        Object[] es;
+        while ((n = size) >= (cap = (es = queue).length))
+            tryGrow(es, cap);
+        try {
+            final Comparator<? super E> cmp;
+            if ((cmp = comparator) == null)
+                siftUpComparable(n, e, es);
+            else
+                siftUpUsingComparator(n, e, es, cmp);
+            size = n + 1;
+            notEmpty.signal();
+        } finally {
+            lock.unlock();
+        }
+        return true;
+    }
+
+    public E take() throws InterruptedException {
+        final ReentrantLock lock = this.lock;
+        lock.lockInterruptibly();
+        E result;
+        try {
+            while ( (result = dequeue()) == null)
+                notEmpty.await();
+        } finally {
+            lock.unlock();
+        }
+        return result;
+    }
+
+    private E dequeue() {
+        // assert lock.isHeldByCurrentThread();
+        final Object[] es;
+        final E result;
+
+        if ((result = (E) ((es = queue)[0])) != null) {
+            final int n;
+            final E x = (E) es[(n = --size)];
+            es[n] = null;
+            if (n > 0) {
+                final Comparator<? super E> cmp;
+                if ((cmp = comparator) == null)
+                    siftDownComparable(0, x, es, n);
+                else
+                    siftDownUsingComparator(0, x, es, n, cmp);
+            }
+        }
+        return result;
+    }
+}
+```
+
+### DelayQueue
+
+支持延时获取元素的无界队列，队列中的元素需要实现 `Delayed` 接口
+
+```java
+
+public class DelayQueue<E extends Delayed> extends AbstractQueue<E>
+    implements BlockingQueue<E>{
+    private final PriorityQueue<E> q = new PriorityQueue<E>();
+
+    public DelayQueue() {}
+
+    // 添加元素
+    public boolean offer(E e) {
+        final ReentrantLock lock = this.lock;
+        lock.lock();
+        try {
+            // 插入队列中
+            q.offer(e);
+            if (q.peek() == e) {
+                leader = null;
+                available.signal();
+            }
+            return true;
+        } finally {
+            lock.unlock();
+        }
+    }
+
+    public E take() throws InterruptedException {
+        final ReentrantLock lock = this.lock;
+        lock.lockInterruptibly();
+        try {
+            for (;;) {
+                E first = q.peek();
+                // 头元素为空null时阻塞
+                if (first == null)
+                    available.await();
+                else {
+                    // 剩余延迟时间
+                    long delay = first.getDelay(NANOSECONDS);
+                    if (delay <= 0L)
+                        // 弹出头元素
+                        return q.poll();
+                    first = null; // don't retain ref while waiting
+                    if (leader != null)
+                        available.await();
+                    else {
+                        Thread thisThread = Thread.currentThread();
+                        leader = thisThread;
+                        try {
+                            available.awaitNanos(delay);
+                        } finally {
+                            if (leader == thisThread)
+                                leader = null;
+                        }
+                    }
+                }
+            }
+        } finally {
+            if (leader == null && q.peek() != null)
+                available.signal();
+            lock.unlock();
+        }
+    }
+}
+```
+
+#### PriorityQueue
+
+优先级队列
+
+PriorityQueue 底层通过数组来实现元素的存储
+
+```java
+public class PriorityQueue<E> extends AbstractQueue<E>{
+    private static final int DEFAULT_INITIAL_CAPACITY = 11;
+
+    // 队列的元素保存在数组queue中，其数据结构为最小堆，也就是用数组表示的完全二叉树
+    transient Object[] queue;
+    int size;
+    transient int modCount;
+
+    public PriorityQueue(int initialCapacity,
+                         Comparator<? super E> comparator) {
+        // Note: This restriction of at least one is not actually needed,
+        // but continues for 1.5 compatibility
+        if (initialCapacity < 1)
+            throw new IllegalArgumentException();
+        this.queue = new Object[initialCapacity];
+        this.comparator = comparator;
+    }
+
+    // 插入元素
+    public boolean offer(E e) {
+        if (e == null)
+            throw new NullPointerException();
+        // 修改次数
+        modCount++;
+        int i = size;
+        if (i >= queue.length)
+            grow(i + 1);
+        siftUp(i, e);
+        size = i + 1;
+        return true;
+    }
+
+    private void siftUp(int k, E x) {
+        if (comparator != null)
+            // 基于comparator属性进行大小比较
+            siftUpUsingComparator(k, x, queue, comparator);
+        else
+            // 根据元素自身进行排序
+            siftUpComparable(k, x, queue);
+    }
+
+    private static <T> void siftUpComparable(int k, T x, Object[] es) {
+        Comparable<? super T> key = (Comparable<? super T>) x;
+        while (k > 0) {
+            int parent = (k - 1) >>> 1;
+            Object e = es[parent];
+            if (key.compareTo((T) e) >= 0)
+                break;
+            es[k] = e;
+            k = parent;
+        }
+        es[k] = key;
+    }
+
+    private static <T> void siftUpUsingComparator(
+        int k, T x, Object[] es, Comparator<? super T> cmp) {
+        while (k > 0) {
+            int parent = (k - 1) >>> 1;
+            Object e = es[parent];
+            if (cmp.compare(x, (T) e) >= 0)
+                break;
+            es[k] = e;
+            k = parent;
+        }
+        es[k] = x;
+    }
+
+    // 扩容 小于64扩容两倍+2，否则扩容1.5倍
+    private void grow(int minCapacity) {
+        int oldCapacity = queue.length;
+        // Double size if small; else grow by 50%
+        int newCapacity = oldCapacity + ((oldCapacity < 64) ?
+                                         (oldCapacity + 2) :
+                                         (oldCapacity >> 1));
+        // overflow-conscious code
+        if (newCapacity - MAX_ARRAY_SIZE > 0)
+            newCapacity = hugeCapacity(minCapacity);
+        // 复制数据
+        queue = Arrays.copyOf(queue, newCapacity);
+    }
+
+    private static int hugeCapacity(int minCapacity) {
+        if (minCapacity < 0) // overflow
+            throw new OutOfMemoryError();
+        return (minCapacity > MAX_ARRAY_SIZE) ?
+            Integer.MAX_VALUE :
+            MAX_ARRAY_SIZE;
+    }
+
+    // 头元素
+    public E peek() {
+        return (E) queue[0];
+    }
+}
+```
+
+#### 小顶堆
+
+![](../../resources/java/hc/1078540-20191219134028689-155327191.png)
+
+元素节点关系
+
+```
+leftNo = parentNo * 2 + 1
+rightNo = parentNo * 2 + 2
+parentNo = (currentNo -1) / 2
+
+parentNo：表示父节点下标；
+leftNo：表示子元素左节点下标；
+rightNo：表示子元素右节点下标；
+currentNo：表示当前元素节点下标；
+```
+
+通过上述三个公式，可以轻易计算出某个节点的父节点以及子节点的下标
+
+![](../../resources/java/hc/1078540-20191219134058870-285989691.png)
+
+
 ## 参考
 
 [Java并发编程之ConcurrentLinkedQueue详解](https://blog.csdn.net/qq_38293564/article/details/80798310)
+
+[深入浅出分析 PriorityQueue](https://www.cnblogs.com/dxflqm/p/12067265.html)
