--- a/src/java/hc/锁.md
+++ b/src/java/hc/锁.md
@@ -210,6 +210,710 @@ ReentrantLock 是 Java 中的类：继承了 Lock 类，可重入锁、悲观锁
 * ReentrantLock 通过 Condition 可以绑定多个条件。
 
 
+## Lock
+
+![](../../resources/java/hc/885859-20190428143036791-1293316018.png)
+
+
+### 源码
+
+```java
+public interface Lock {
+    // 获取锁
+    void lock();
+
+    // 如果当前线程未被中断，则获取锁，可以响应中断 
+    void lockInterruptibly() throws InterruptedException;
+
+    // 仅在调用时锁为空闲状态才获取该锁，可以响应中断
+    boolean tryLock();
+    
+    // 如果锁在给定的等待时间内空闲，并且当前线程未被中断，则获取锁
+    boolean tryLock(long time, TimeUnit unit) throws InterruptedException;
+
+    // 返回绑定到此 Lock 实例的新 Condition 实例 
+    Condition newCondition();
+
+    // 释放锁
+    void unlock();
+}
+```
+* lock()
+
+获取锁,如果锁已被其他线程获取，则进行等待
+
+* lockInterruptibly()
+
+当两个线程同时通过lock.lockInterruptibly()想获取某个锁时，假若此时线程A获取到了锁，而线程B只有在等待，那么对线程B调用threadB.interrupt()方法能够中断线程B的等待过程
+
+## 队列同步器
+
+```java
+public abstract class AbstractQueuedSynchronizer
+    extends AbstractOwnableSynchronizer
+    implements java.io.Serializable {
+
+    // 队列
+    private transient volatile Node head;
+    private transient volatile Node tail;
+
+    // 同步队列用来保存获取同步状态失败的线程引用，等待状态、前驱节点、后驱节点、节点的属性等信息
+    static final class Node {
+    /// 模式
+        // 共享
+        static final Node SHARED = new Node();
+        // 独占
+        static final Node EXCLUSIVE = null;
+
+    /// 状态
+        /** waitStatus value to indicate thread has cancelled. */
+        static final int CANCELLED =  1;
+        /** waitStatus value to indicate successor's thread needs unparking. */
+        static final int SIGNAL    = -1;
+        /** waitStatus value to indicate thread is waiting on condition. */
+        static final int CONDITION = -2;
+        /**
+         * waitStatus value to indicate the next acquireShared should
+         * unconditionally propagate.
+         */
+        static final int PROPAGATE = -3;
+
+        // 等待状态
+        volatile int waitStatus;
+        volatile Node prev;
+        volatile Thread thread;
+        // 等待队列的后继节点
+        Node nextWaiter;
+        // 获取同步状态的线程
+        volatile Thread thread;
+
+        Node() {}
+
+        Node(Node nextWaiter) {
+            this.nextWaiter = nextWaiter;
+            THREAD.set(this, Thread.currentThread());
+        }
+    }
+
+    // 同步状态
+    private volatile int state;
+    // 获取当前同步状态
+    protected final int getState() {
+        return state;
+    }
+    // 设置当前同步状态
+    protected final void setState(int newState) {
+        state = newState;
+    }
+    // 使用CAS设置当前同步状态
+    protected final boolean compareAndSetState(int expect, int update) {
+        return STATE.compareAndSet(this, expect, update);
+    }
+
+///// 独占式同步状态获取和释放
+    // 获取同步
+    public final void acquire(int arg) {
+        /*
+            1. tryAcquire 线程安全的获取同步状态
+            2. 获取失败，构造同步节点（独占式 Node.EXCLUSIVE） 并通过addWaiter(Node node)把节点放入队尾
+            3. 调用 acquireQueued 获取同步状态
+        */
+        if (!tryAcquire(arg) &&
+            acquireQueued(addWaiter(Node.EXCLUSIVE), arg))
+            selfInterrupt();
+    }
+
+    // 子类需要重写
+    protected boolean tryAcquire(int arg) {
+        throw new UnsupportedOperationException();
+    }
+
+    private Node addWaiter(Node mode) {
+        // 创建节点
+        Node node = new Node(mode);
+
+        // 放入队列尾部
+        for (;;) {
+            Node oldTail = tail;
+            if (oldTail != null) {
+                node.setPrevRelaxed(oldTail);
+                if (compareAndSetTail(oldTail, node)) {
+                    oldTail.next = node;
+                    return node;
+                }
+            } else {
+                initializeSyncQueue();
+            }
+        }
+    }
+
+    final boolean acquireQueued(final Node node, int arg) {
+        boolean interrupted = false;
+        try {
+            for (;;) {
+                final Node p = node.predecessor();
+                if (p == head && tryAcquire(arg)) {
+                    setHead(node);
+                    p.next = null; // help GC
+                    return interrupted;
+                }
+                if (shouldParkAfterFailedAcquire(p, node))
+                    interrupted |= parkAndCheckInterrupt();
+            }
+        } catch (Throwable t) {
+            cancelAcquire(node);
+            if (interrupted)
+                selfInterrupt();
+            throw t;
+        }
+    }
+
+    // 释放
+    public final boolean release(int arg) {
+        // 释放同步状态
+        if (tryRelease(arg)) {
+            Node h = head;
+            if (h != null && h.waitStatus != 0)
+                // 唤醒头结点的后继节点
+                unparkSuccessor(h);
+            return true;
+        }
+        return false;
+    }
+
+    // 子类需要重写
+    protected boolean tryRelease(int arg) {
+        throw new UnsupportedOperationException();
+    }
+
+    private void unparkSuccessor(Node node) {
+        /*
+         * If status is negative (i.e., possibly needing signal) try
+         * to clear in anticipation of signalling.  It is OK if this
+         * fails or if status is changed by waiting thread.
+         */
+        int ws = node.waitStatus;
+        if (ws < 0)
+            node.compareAndSetWaitStatus(ws, 0);
+
+        /*
+         * Thread to unpark is held in successor, which is normally
+         * just the next node.  But if cancelled or apparently null,
+         * traverse backwards from tail to find the actual
+         * non-cancelled successor.
+         */
+        Node s = node.next;
+        if (s == null || s.waitStatus > 0) {
+            s = null;
+            for (Node p = tail; p != node && p != null; p = p.prev)
+                if (p.waitStatus <= 0)
+                    s = p;
+        }
+        if (s != null)
+            LockSupport.unpark(s.thread);
+    }
+
+///// 共享式
+    public final void acquireShared(int arg) {
+        if (tryAcquireShared(arg) < 0)
+            doAcquireShared(arg);
+    }
+
+    protected int tryAcquireShared(int arg) {
+        throw new UnsupportedOperationException();
+    }
+
+    private void doAcquireShared(int arg) {
+        final Node node = addWaiter(Node.SHARED);
+        boolean interrupted = false;
+        try {
+            for (;;) {
+                final Node p = node.predecessor();
+                // 如果当前节点的前驱节点为头结点，尝试获取同步状态
+                if (p == head) {
+                    int r = tryAcquireShared(arg);
+                    if (r >= 0) {
+                        setHeadAndPropagate(node, r);
+                        p.next = null; // help GC
+                        return;
+                    }
+                }
+                if (shouldParkAfterFailedAcquire(p, node))
+                    interrupted |= parkAndCheckInterrupt();
+            }
+        } catch (Throwable t) {
+            cancelAcquire(node);
+            throw t;
+        } finally {
+            if (interrupted)
+                selfInterrupt();
+        }
+    }
+
+    public final boolean releaseShared(int arg) {
+        if (tryReleaseShared(arg)) {
+            doReleaseShared();
+            return true;
+        }
+        return false;
+    }
+
+    protected boolean tryReleaseShared(int arg) {
+        throw new UnsupportedOperationException();
+    }
+
+    private void doReleaseShared() {
+        /*
+         * Ensure that a release propagates, even if there are other
+         * in-progress acquires/releases.  This proceeds in the usual
+         * way of trying to unparkSuccessor of head if it needs
+         * signal. But if it does not, status is set to PROPAGATE to
+         * ensure that upon release, propagation continues.
+         * Additionally, we must loop in case a new node is added
+         * while we are doing this. Also, unlike other uses of
+         * unparkSuccessor, we need to know if CAS to reset status
+         * fails, if so rechecking.
+         */
+        for (;;) {
+            Node h = head;
+            if (h != null && h != tail) {
+                int ws = h.waitStatus;
+                if (ws == Node.SIGNAL) {
+                    if (!h.compareAndSetWaitStatus(Node.SIGNAL, 0))
+                        continue;            // loop to recheck cases
+                    unparkSuccessor(h);
+                }
+                else if (ws == 0 &&
+                         !h.compareAndSetWaitStatus(0, Node.PROPAGATE))
+                    continue;                // loop on failed CAS
+            }
+            if (h == head)                   // loop if head changed
+                break;
+        }
+    }
+}
+```
+
+## 重入锁 ReentrantLock
+
+支持重进入的锁，支持一个线程对资源重复加锁
+
+### 结构图
+
+![](../../resources/java/hc/ReentrantLock.png)
+
+### 源码
+
+```java
+public class ReentrantLock implements Lock, java.io.Serializable {
+    private final Sync sync;
+
+    abstract static class Sync extends AbstractQueuedSynchronizer {
+        private static final long serialVersionUID = -5179523762034025860L;
+
+        /**
+         * Performs non-fair tryLock.  tryAcquire is implemented in
+         * subclasses, but both need nonfair try for trylock method.
+         */
+        @ReservedStackAccess
+        final boolean nonfairTryAcquire(int acquires) {
+            final Thread current = Thread.currentThread();
+            int c = getState();
+            if (c == 0) {
+                if (compareAndSetState(0, acquires)) {
+                    setExclusiveOwnerThread(current);
+                    return true;
+                }
+            }
+            else if (current == getExclusiveOwnerThread()) {
+                // 同步状态增加
+                int nextc = c + acquires;
+                if (nextc < 0) // overflow
+                    throw new Error("Maximum lock count exceeded");
+                setState(nextc);
+                return true;
+            }
+            return false;
+        }
+
+        @ReservedStackAccess
+        protected final boolean tryRelease(int releases) {
+            // 释放减少同步状态值
+            int c = getState() - releases;
+            if (Thread.currentThread() != getExclusiveOwnerThread())
+                throw new IllegalMonitorStateException();
+            boolean free = false;
+            // c为0 说明没有线程持有锁则释放锁
+            if (c == 0) {
+                free = true;
+                setExclusiveOwnerThread(null);
+            }
+            setState(c);
+            return free;
+        }
+
+        protected final boolean isHeldExclusively() {
+            // While we must in general read state before owner,
+            // we don't need to do so to check if current thread is owner
+            return getExclusiveOwnerThread() == Thread.currentThread();
+        }
+
+        final ConditionObject newCondition() {
+            return new ConditionObject();
+        }
+
+        // Methods relayed from outer class
+
+        final Thread getOwner() {
+            return getState() == 0 ? null : getExclusiveOwnerThread();
+        }
+
+        final int getHoldCount() {
+            return isHeldExclusively() ? getState() : 0;
+        }
+
+        final boolean isLocked() {
+            return getState() != 0;
+        }
+
+        /**
+         * Reconstitutes the instance from a stream (that is, deserializes it).
+         */
+        private void readObject(java.io.ObjectInputStream s)
+            throws java.io.IOException, ClassNotFoundException {
+            s.defaultReadObject();
+            setState(0); // reset to unlocked state
+        }
+    }
+
+    // 非公平锁
+    static final class NonfairSync extends Sync {
+        private static final long serialVersionUID = 7316153563782823691L;
+        protected final boolean tryAcquire(int acquires) {
+            return nonfairTryAcquire(acquires);
+        }
+    }
+
+    // 公平锁
+    static final class FairSync extends Sync {
+        private static final long serialVersionUID = -3000897897090466540L;
+        
+        @ReservedStackAccess
+        protected final boolean tryAcquire(int acquires) {
+            final Thread current = Thread.currentThread();
+            int c = getState();
+            if (c == 0) {
+                if (!hasQueuedPredecessors() &&
+                    compareAndSetState(0, acquires)) {
+                    setExclusiveOwnerThread(current);
+                    return true;
+                }
+            }
+            // 判断当前线程是否为获取锁的线程来决定获取操作是否成功，获取锁的线程再次请求，将同步状态增加
+            else if (current == getExclusiveOwnerThread()) {
+                int nextc = c + acquires;
+                if (nextc < 0)
+                    throw new Error("Maximum lock count exceeded");
+                setState(nextc);
+                return true;
+            }
+            return false;
+        }
+    }
+    // 创建锁 默认为非公平锁
+    public ReentrantLock() {
+        sync = new NonfairSync();
+    }
+
+    // 指定模式
+    public ReentrantLock(boolean fair) {
+        sync = fair ? new FairSync() : new NonfairSync();
+    }
+
+    // 获取锁
+    public void lock() {
+        sync.acquire(1);
+    }
+
+    // 释放锁
+    public void unlock() {
+        sync.release(1);
+    }
+
+    public Condition newCondition() {
+        return sync.newCondition();
+    }
+
+    public boolean tryLock() {
+        return sync.nonfairTryAcquire(1);
+    }
+}
+```
+
+### 公平锁和非公平锁
+
+公平锁: 获取锁定顺序和请求的时间顺序相同
+独占式: 同一个时间只能有一个线程获取锁
+
+## 读写锁
+
+同一时刻允许多个线程获取锁
+
+### 特性
+
+* 支持公平性选择
+* 支持可重入
+* 锁降级 写锁可以降级为读锁
+
+### 结构图
+
+![](../../resources/java/hc/ReentrantReadWriteLock.png)
+
+### 原理
+
+#### ReadWriteLock.java
+
+```java
+public interface ReadWriteLock {
+    Lock readLock();
+    Lock writeLock();
+}
+```
+
+#### ReentrantReadWriteLock.java
+
+```java
+public class ReentrantReadWriteLock
+        implements ReadWriteLock, java.io.Serializable {
+
+    private final ReentrantReadWriteLock.ReadLock readerLock;
+    private final ReentrantReadWriteLock.WriteLock writerLock;
+
+    final Sync sync;
+    abstract static class Sync extends AbstractQueuedSynchronizer {
+    }
+
+    // 构造默认的读写锁
+    public ReentrantReadWriteLock() {
+        this(false);
+    }
+
+    public ReentrantReadWriteLock(boolean fair) {
+        sync = fair ? new FairSync() : new NonfairSync();
+        // 创建读锁
+        readerLock = new ReadLock(this);
+        // 创建写锁
+        writerLock = new WriteLock(this);
+    }
+
+    public ReentrantReadWriteLock.WriteLock writeLock() { return writerLock; }
+    public ReentrantReadWriteLock.ReadLock  readLock()  { return readerLock; }
+
+    public static class ReadLock implements Lock, java.io.Serializable {
+        private final Sync sync;
+
+        protected ReadLock(ReentrantReadWriteLock lock) {
+            sync = lock.sync;
+        }
+
+        public void lock() {
+            // 共享锁
+            sync.acquireShared(1);
+        }
+
+        public void unlock() {
+            sync.releaseShared(1);
+        }
+    }
+
+    public static class WriteLock implements Lock, java.io.Serializable {
+        private final Sync sync;
+        protected WriteLock(ReentrantReadWriteLock lock) {
+            sync = lock.sync;
+        }
+        public void lock() {
+            // AQS
+            sync.acquire(1);
+        }
+
+        public void unlock() {
+            // AQS
+            sync.release(1);
+        }
+
+        // 持有数量
+        public int getHoldCount() {
+            return sync.getWriteHoldCount();
+        }
+    }
+
+    static final class NonfairSync extends Sync {
+        private static final long serialVersionUID = -8159625535654395037L;
+        final boolean writerShouldBlock() {
+            return false; // writers can always barge
+        }
+        final boolean readerShouldBlock() {
+            /* As a heuristic to avoid indefinite writer starvation,
+             * block if the thread that momentarily appears to be head
+             * of queue, if one exists, is a waiting writer.  This is
+             * only a probabilistic effect since a new reader will not
+             * block if there is a waiting writer behind other enabled
+             * readers that have not yet drained from the queue.
+             */
+            return apparentlyFirstQueuedIsExclusive();
+        }
+    }
+
+    // 公平锁
+    static final class FairSync extends Sync {
+        private static final long serialVersionUID = -2274990926593161451L;
+        final boolean writerShouldBlock() {
+            return hasQueuedPredecessors();
+        }
+        final boolean readerShouldBlock() {
+            return hasQueuedPredecessors();
+        }
+    }
+}
+```
+
+`按位切割使用` 变量 `state`, 读写锁将变量分为两个部分。高16位表示读，低16位表示写。
+
+位运算
+假设当前同步状态为S ,写状态为 S & 0x0000FFFF; 读状态为 S >> 16
+
+写状态加1，等于S+1; 读状态加1, 等于 S+(1<<16)
+
+
+## LockSupport
+
+提供了基本线程阻塞和唤醒的方法
+
+```java
+public class LockSupport {
+    // 不可以被实例化
+    private LockSupport() {}
+
+    // 获取 Unsafe 实例
+    private static final Unsafe U = Unsafe.getUnsafe();
+
+    // 阻塞线程
+    public static void park() {
+        U.park(false, 0L);
+    }
+
+    // 唤醒线程
+    public static void unpark(Thread thread) {
+        if (thread != null)
+            U.unpark(thread);
+    }
+}
+
+```
+
+## Condition
+
+于 Lock 配合实现等待/通知模式
+
+```java
+public interface Condition {
+    // 当前线程进入等待状态直到被通知或中断
+    void await() throws InterruptedException;
+
+    // 当前线程进入等待状态直到被通知
+    void awaitUninterruptibly();
+
+    // 当前线程进入等待状态直到被通知、中断、超时。返回值标识剩余的时间
+    long awaitNanos(long nanosTimeout) throws InterruptedException;
+
+    // 唤醒一个等待在Condition 的线程
+    void signal();
+    // 唤醒所有等待在Condition 的线程
+    void signalAll();
+}
+
+// 作为AQS的内部类实现
+public abstract class AbstractQueuedSynchronizer
+    extends AbstractOwnableSynchronizer
+    implements java.io.Serializable {
+
+    public class ConditionObject implements Condition, java.io.Serializable {
+        
+        // 等待队列
+        private transient Node firstWaiter;
+        private transient Node lastWaiter;
+
+        public ConditionObject() { }
+
+        // 阻塞线程
+        public final void await() throws InterruptedException {
+            // 已中断 抛出异常
+            if (Thread.interrupted())
+                throw new InterruptedException();
+            // 当前线程加入等待队列
+            Node node = addConditionWaiter();
+            // 释放同步状态，即释放锁
+            int savedState = fullyRelease(node);
+            int interruptMode = 0;
+            while (!isOnSyncQueue(node)) {
+                LockSupport.park(this);
+                if ((interruptMode = checkInterruptWhileWaiting(node)) != 0)
+                    break;
+            }
+            if (acquireQueued(node, savedState) && interruptMode != THROW_IE)
+                interruptMode = REINTERRUPT;
+            if (node.nextWaiter != null) // clean up if cancelled
+                unlinkCancelledWaiters();
+            if (interruptMode != 0)
+                reportInterruptAfterWait(interruptMode);
+        }
+
+        // 增加一个新的Waiter到等待队列
+        private Node addConditionWaiter() {
+            if (!isHeldExclusively())
+                throw new IllegalMonitorStateException();
+            Node t = lastWaiter;
+            // If lastWaiter is cancelled, clean out.
+            if (t != null && t.waitStatus != Node.CONDITION) {
+                unlinkCancelledWaiters();
+                t = lastWaiter;
+            }
+
+            Node node = new Node(Node.CONDITION);
+
+            if (t == null)
+                firstWaiter = node;
+            else
+                t.nextWaiter = node;
+            lastWaiter = node;
+            return node;
+        }
+
+        // 唤醒线程（等待队列的首节点）
+        public final void signal() {
+            // 检查是否获取了锁
+            if (!isHeldExclusively())
+                throw new IllegalMonitorStateException();
+            Node first = firstWaiter;
+            if (first != null)
+                doSignal(first);
+        }
+
+        private void doSignal(Node first) {
+            do {
+                if ( (firstWaiter = first.nextWaiter) == null)
+                    lastWaiter = null;
+                first.nextWaiter = null;
+                // 将 等待队列的头结点线程安全的移动到同步队列
+            } while (!transferForSignal(first) &&
+                     (first = firstWaiter) != null);
+        }
+    }
+}
+```
+
+线程进入等待状态释放锁，唤醒前需要先获取到锁
+
 ## 参考
 
 [24张图带你彻底理解Java中的21种锁](https://mp.weixin.qq.com/s/kMyyHaDQn-Da8MTmpPUyfg)
