--- a/src/java/hc/多线程.md
+++ b/src/java/hc/多线程.md
@@ -2,11 +2,22 @@
 title: '多线程'
 ---
 
-## 多线程
-### 简介
+## 线程
+
+现代操作系统在运行一个程序时，会创建一个进程。操作系统调度最小的单元是线程。
+一个进程内可以创建多个线程，这些线程又有各自的计数器，堆栈和局部变量
+
+优点:
+* 更多的处理器核心
+* 更快的响应时间
+* 更好的编程模型
+
+### 并发和并行
+
 多线程是多任务的一种特别的形式，但多线程使用了更小的资源开销
 
-> 并发性和并行性是不同的概念：并行是指同一时刻，多个命令在多个处理器上同时执行；并发是指在同一时刻，只有一条命令是在处理器上执行的，但多个进程命令被快速轮换执行，使得在宏观上具有多个进程同时执行的效果
+* 并行是指同一时刻，多个命令在多个处理器上同时执行；
+* 并发是指在同一时刻，只有一条命令是在处理器上执行的，但多个进程命令被快速轮换执行，使得在宏观上具有多个进程同时执行的效果
 
 
 ### 线程状态
@@ -37,6 +48,9 @@ title: '多线程'
 
 5. 死亡状态:
 	一个运行状态的线程完成任务或者其他终止条件发生时，该线程就切换到终止状态。  
+
+> start()的含义: 当前线程同步告知虚拟机，只要线程规划器空闲，应立即启动调用start()方法的线程
+> join()的含义: 当前线程等待thread线程终止之后才从thread.join()返回
 	
 ### 创建线程
 #### 创建
@@ -339,10 +353,11 @@ Lock fairLock= new ReentrantLock(true);
 * 乐观锁：假设不会发生并发冲突，直接不加锁去完成某项更新，如果冲突就返回失败。
 
 ### 线程通信
-#### Object类的wait()、notify()、notifyAll()
 
- * 线程执行wait()后，就放弃了运行资格，处于冻结状态；
- * 线程运行时，内存中会建立一个线程池，冻结状态的线程都存在于线程池中，notify()执行时唤醒的也是线程池中的线程，线程池中有多个线程时唤醒第一个被冻结的线程。
+#### Object类的 wait()、notify()、notifyAll()
+
+* 线程执行wait()后，就放弃了运行资格，处于冻结状态；
+* 线程运行时，内存中会建立一个线程池，冻结状态的线程都存在于线程池中，notify()执行时唤醒的也是线程池中的线程，线程池中有多个线程时唤醒第一个被冻结的线程。
 * notifyall(), 唤醒线程池中所有线程。
 
 #### Condition控制线程通信
@@ -368,6 +383,171 @@ PriorityBlockingQueue：它并不是保准的阻塞队列，该队列调用remov
 SynchronousQueue：同步队列。对该队列的存、取操作必须交替进行。
 DelayQueue：它是一个特殊的BlockingQueue，底层基于PriorityBlockingQueue实现，不过，DelayQueue要求集合元素都实现Delay接口（该接口里只有一个long getDelay（）方法），
             DelayQueue根据集合元素的getDalay（）方法的返回值进行排序。
+```
+
+#### ThreadLocal
+
+提供线程本地变量，如果创建一个 `ThreadLocal` 变量，那么访问这个变量的每个线程都会有这个变量的一个副本，
+在实际多线程操作的时候，操作的是自己本地内存中的变量，从而规避了线程安全问题
+
+![](../../resources/java/hc/1368768-20190614000329689-872917045.png)
+
+```java
+public class ThreadLocal<T> {
+    private final int threadLocalHashCode = nextHashCode();
+    private static final int HASH_INCREMENT = 0x61c88647;
+    private static AtomicInteger nextHashCode = new AtomicInteger();
+
+    private static int nextHashCode() {
+        return nextHashCode.getAndAdd(HASH_INCREMENT);
+    }
+
+    // 
+    static class ThreadLocalMap {
+        static class Entry extends WeakReference<ThreadLocal<?>> {
+            Object value;
+
+            Entry(ThreadLocal<?> k, Object v) {
+                super(k);
+                value = v;
+            }
+        }
+
+        private static final int INITIAL_CAPACITY = 16;
+        private Entry[] table;
+        private int size = 0;
+        private int threshold;
+
+        ThreadLocalMap(ThreadLocal<?> firstKey, Object firstValue) {
+            table = new Entry[INITIAL_CAPACITY];
+            int i = firstKey.threadLocalHashCode & (INITIAL_CAPACITY - 1);
+            // 创建节点并赋值
+            table[i] = new Entry(firstKey, firstValue);
+            size = 1;
+            setThreshold(INITIAL_CAPACITY);
+        }
+
+        private Entry getEntry(ThreadLocal<?> key) {
+            int i = key.threadLocalHashCode & (table.length - 1);
+            Entry e = table[i];
+            if (e != null && e.get() == key)
+                return e;
+            else
+                return getEntryAfterMiss(key, i, e);
+        }
+
+        private void set(ThreadLocal<?> key, Object value) {
+
+            // We don't use a fast path as with get() because it is at
+            // least as common to use set() to create new entries as
+            // it is to replace existing ones, in which case, a fast
+            // path would fail more often than not.
+
+            Entry[] tab = table;
+            int len = tab.length;
+            int i = key.threadLocalHashCode & (len-1);
+
+            for (Entry e = tab[i];
+                 e != null;
+                 e = tab[i = nextIndex(i, len)]) {
+                ThreadLocal<?> k = e.get();
+
+                if (k == key) {
+                    e.value = value;
+                    return;
+                }
+
+                if (k == null) {
+                    replaceStaleEntry(key, value, i);
+                    return;
+                }
+            }
+
+            tab[i] = new Entry(key, value);
+            int sz = ++size;
+            if (!cleanSomeSlots(i, sz) && sz >= threshold)
+                rehash();
+        }
+
+        // 扩容
+        private void resize() {
+            Entry[] oldTab = table;
+            int oldLen = oldTab.length;
+            int newLen = oldLen * 2;
+            Entry[] newTab = new Entry[newLen];
+            int count = 0;
+
+            for (Entry e : oldTab) {
+                if (e != null) {
+                    ThreadLocal<?> k = e.get();
+                    if (k == null) {
+                        e.value = null; // Help the GC
+                    } else {
+                        int h = k.threadLocalHashCode & (newLen - 1);
+                        while (newTab[h] != null)
+                            h = nextIndex(h, newLen);
+                        newTab[h] = e;
+                        count++;
+                    }
+                }
+            }
+
+            setThreshold(newLen);
+            size = count;
+            table = newTab;
+        }
+    }
+
+    // 创建实例
+    public ThreadLocal() {
+    }
+
+    ThreadLocalMap getMap(Thread t) {
+        return t.threadLocals;
+    }
+
+    public void set(T value) {
+        Thread t = Thread.currentThread();
+        // 获取线程 threadLocals
+        ThreadLocalMap map = getMap(t);
+        if (map != null) {
+            // 设置值
+            map.set(this, value);
+        } else {
+            createMap(t, value);
+        }
+    }
+
+    // 创建一个 ThreadLocalMap
+    void createMap(Thread t, T firstValue) {
+        t.threadLocals = new ThreadLocalMap(this, firstValue);
+    }
+
+    // 获取值
+    public T get() {
+        Thread t = Thread.currentThread();
+        ThreadLocalMap map = getMap(t);
+        if (map != null) {
+            // 获取实体元素
+            ThreadLocalMap.Entry e = map.getEntry(this);
+            if (e != null) {
+                @SuppressWarnings("unchecked")
+                // 获取值
+                T result = (T)e.value;
+                return result;
+            }
+        }
+        return setInitialValue();
+    }
+
+    // 移除
+    public void remove() {
+         ThreadLocalMap m = getMap(Thread.currentThread());
+         if (m != null) {
+             m.remove(this);
+         }
+     }
+}
 ```
 
 ## 线程池
